# nix-dram

./: .drone.yml  .gitignore  README.md  flake.nix  garnix.yaml  overlay.nix
.github/workflows/: check.yml
nix-nar-listing/: default.nix  nix-nar-listing.cabal
nix-nar-listing/app/: Main.hs
nix-nar-listing/src/Nix/Nar/Listing/: Pretty.hs  Types.hs  Utils.hs
nix-patches/: nix-binfmt-misc.patch  nix-dram-binfmt-misc.patch  nix-dram-default-flake.patch  nix-dram-environment.patch  nix-dram-search-meta.patch  nix-environment.patch  nix-flake-default.patch  nix-flake-http-redirect.patch  nix-git-fetch-no-quiet.patch  nix-search-meta.patch
nix-search-pretty/: Main.hs  default.nix  nix-search-pretty.cabal
