cabal-version:        2.2

name:                 nix-search-pretty
version:              0.1.0.0
license:              BSD-3-Clause
author:               dramforever
maintainer:           dramforever@live.com
build-type:           Simple

executable nix-search-pretty
  main-is: Main.hs
  build-depends:
      base >= 4.14
    , aeson >= 1.5.5.1
    , prettyprinter >= 1.7.0
    , prettyprinter-ansi-terminal >= 1.1.2
    , text >= 1.2.4.1
    , unordered-containers >= 0.2.13.0
    , bytestring >= 0.10.12.0
    , vector >= 0.12.1.2
  default-language: Haskell2010
